SFUSA/force-app/main/default/objects/Application_Question__c/fields/Help_Text__c.field-meta.xml
<CustomField>
        <fullName>Help_Text__c</fullName>
        <label>Help Text</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>