SFUSA/force-app/main/default/objects/Application_Question__c/fields/Order__c.field-meta.xml
<CustomField>
        <fullName>Order__c</fullName>
        <description>The order in which the question will be dispalyed</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>