SFUSA/force-app/main/default/objects/Application_Question__c/fields/Question__c.field-meta.xml
<CustomField>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <type>TextArea</type>
    </CustomField>