SFUSA/force-app/main/default/objects/Application_Question__c/fields/Question_Section__c.field-meta.xml
<CustomField>
        <fullName>Question_Section__c</fullName>
        <label>Question Section</label>
        <length>150</length>
        <type>Text</type>
    </CustomField>