SFUSA/force-app/main/default/objects/Application_Question__c/fields/Required__c.field-meta.xml
<CustomField>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required?</label>
        <type>Checkbox</type>
    </CustomField>