SFUSA/force-app/main/default/objects/Application_Question__c/fields/Type__c.field-meta.xml
<CustomField>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Dropdown</fullName>
                </value>
                <value>
                    <fullName>Checkbox Group</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Date Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>