SFUSA/force-app/main/default/objects/Application_Question__c/recordTypes/LegalContract.recordType-meta.xml
<RecordType>
        <fullName>LegalContract</fullName>
        <active>true</active>
        <label>Legal Contract</label>
    </RecordType>